# rustis

./: Cargo.toml  README.md  benchmark.py  benchmarks.csv  generate_report.py  past_benchmarks.md
src/: connection.rs  handler.rs  kv.rs  lib.rs  main.rs  message.rs  parser.rs  router.rs  threads.rs  worker.rs
tests/: handler_tests.rs  kv_tests.rs  parser_tests.rs  router_tests.rs
