[package]
name = "rustis"
version = "0.1.0"
edition = "2024"

[dependencies]
bytes = "1.11.0"
core_affinity = "0.8.3"
crossbeam = "0.8.4"
memchr = "2.7.6"
socket2 = "0.6.2"
thread-priority = "3.0.0"
[target.'cfg(not(target_env = "msvc"))'.dependencies]
tikv-jemallocator = "0.6.1"
tokio = { version = "1", features = ["full"] }

[profile.release]
lto = "fat"             # Link Time Optimization: aggressive cross-crate inlining
codegen-units = 1       # Compile as one giant unit (slower compile, faster code)
panic = "abort"         # Crash immediately on panic (removes unwinding overhead)
strip = true            # Strips symbols (smaller binary, slightly faster load)
